--- a/kubernetes/apps/default/nfs-subdir-external-ssd/nfs-subdir-external.yaml
+++ b/kubernetes/apps/default/nfs-subdir-external-ssd/nfs-subdir-external.yaml
@@ -17,8 +17,8 @@ spec:
   interval: 60m
   values:
     nfs:
-      server: 192.168.1.230
-      path: /srv/nfs
+      server: 192.168.1.171
+      path: /mnt/storage-pool/kubernetes
     storageClass:
       accessModes:
         - ReadWriteMany
