--- a/kubernetes/apps/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/kube-system/cilium/ks.yaml
@@ -29,8 +29,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-#  dependsOn:
-#    - name: cilium
+  dependsOn:
+    - name: cilium
   path: ./kubernetes/apps/kube-system/cilium/config
   prune: false # never should be deleted
   sourceRef:
