--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:lxbHXifC+Sd+PRs=,iv:vOPIQWa0kyy22Z8KgMyIxVtvkNuzZWvoWszPAU4FesQ=,tag:rFxTVfnnCd8grY3ylDzDAw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:8jHvAM/6+wsk15kO2KTvVuiCn13lOA==,iv:4vc2L75RP3semetHes7nTWgiEP3X9ZrbNLdLJx57Qj8=,tag:j3WJcvC0Tzn7SsMwriqCyQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:OeH5g3qqLL8Z3ZEW5CRTWBN9NNUEZririljnxanAKuGfpeho,iv:M7Fv1juOeCUt4AbuK7gEbjV0n3jULeV30WVh/9PLdWg=,tag:Ov39AyAEu88orJIOUevvxA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:6usDp+vKjqaJw00=,iv:cJBsRVSaRgTTjABs3XSSj4UaAt7JMj9cdSTm75iTWCo=,tag:rsL25TUIrEqB0cEkbsMRDA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:dYOVV865B+vSvjdCXHo2nCT5qCJkVA==,iv:KCv1yZ+Ln6qbxURx6MBheL363INrb6FACi0wyrcqO28=,tag:kZtAW0UL4JxObPXSUIRI4w==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:kTkOEAQbu7ukL77bUVp1ObTXoiJAb6ZrnsFxMpaKHVMGvgYG,iv:8IPzB5SyDcReCo/2YMYyQGnvILlrUxOuf8YLo92oEps=,tag:5wyMgNvvlTEZTQMF/Q7/tA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUbU0veWE2dlBENVlCaVhR
-            d2JaOXM2MHd0d1VOM0xEVng3dGd6TmtSaGlRCnJiczU3NE1UVlBBVjdmNWJHQi9Z
-            SVF1RkdUNjdmOENWSlQ1empwTERQRnMKLS0tIGFXQnhLeUNUMi9sYlF3TTR2ZXJp
-            OTl4eFNwQmRUb2ZpdFVubjVVNDU0d00KXkgbK6apDP+zBLqA80vNol7sBhizsGoZ
-            MRgsqwKgfksIYzt6cMA1ZZoGmFHxdwkey4Fs9wXLGBU+1MvUe8IkOA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPYnJMUU4rN3FWV0xsdkNK
+            dWFlOW9SUGExWm9yU1lkRkxnRXdsTUlrNTE4CnF2cG82QjY5amduWWhuQ0VqZVNu
+            NFZHYWV3NzBudDBnZlpvTW9ra2dQUFEKLS0tIFNDZmEvaURuS093M3JMWjAvRm1i
+            NEF1a1NXTXVXQnZoWUFtZlJyWk1ZcmMKtMBsX99WcNcvhRktkZ075rJ+NdmQWjZ0
+            7zfq1JlK2MWY1scRzfzcM3ibFcLIsj96vzTtfsd32EdsTDYV3A9fJw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-23T23:20:48Z"
-    mac: ENC[AES256_GCM,data:5EN7n9C8V6kuvQmHl0+p1k36ddrUsYpJR8RfqQg2TxounUvKMhCfhgK6b80QubKbNkszS6JKNyLPX5HEgLnnA+6qmwX+gra9ong1GzMH4+FCEjr0OYrQMrCePsHlXFrhIWBw8O49NhiDlrKV/mbLonYC77ysuL19RTSOXc1knjE=,iv:1bZ8QGmKpQiMXJX+Mr/7DOy2cmaPordJvwDrdDsEOjc=,tag:4fmey0aqd5zh3xderKlV+g==,type:str]
+    lastmodified: "2024-11-30T17:47:40Z"
+    mac: ENC[AES256_GCM,data:YYl1g8pNflpok6luWQso3yfO+kr+AqNCsbQzi6Am7X+a27xF0lAxVq/g05CdOLNLrEJLCqrk+u9c24zBrBno9bG7QgYICSBexTNKMppG2T2Jw9hXaBzz+tuAFVeVNJj9DT6H8yExDvaraEMqokUkZ2tZKGg1G3mbECiGpUPYbA8=,iv:BYPtkKEQ0XyerrLxONPQ5HgpsteoSFbQA4wyCWUKm3A=,tag:etfW0V6JiudebkjCNI0Nug==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
